@@ -205,12 +205,6 @@ namespace AriaMaestosa
             m_start_tick = 0;
             makeJDKMidiSequence(m_sequence, *jdkmidiseq, m_selection_only, &songLengthInTicks,
                                 &m_start_tick, &trackAmount, true /* for playback */);
-                                
-            // add one beat at the end to leave some time for notes to ring off
-            if (not m_sequence->isLoopEnabled())
-            {
-                songLengthInTicks += m_sequence->ticksPerBeat();
-            }
             
             //std::cout << "trackAmount=" << trackAmount << " start_tick=" << m_start_tick<<
             //        " songLengthInTicks=" << songLengthInTicks << std::endl;
@@ -291,7 +285,9 @@ namespace AriaMaestosa
             }
             else
             {
+                //output = new CoreMIDIOutput();
                 fprintf(stderr, "Unknown midi driver <%s>\n", (const char*)driver.utf8_str());
+                output = new AudioUnitOutput(NULL);
             }
         }
         
